--- a/index.html
+++ b/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Document</title>
+    </head>
 
-</body>
+    <body>
+        <header role="banner">
+            <h1>Заголовок страницы</h1>
+                <nav>
+                    <ul>
+                        <li><a href="">Главная</a></li>
+                        <li><a href="">О компаии</a></li>
+                        <li><a href="">Работы</a></li>
+                        <li><a href="">Магазин</a></li>
+                        <li><a href="">Контакты</a></li>
+                    </ul>
+                </nav>
+        </header>
+
+        <main role="main">
+            <section>
+                <header>
+                    <h1>Новости</h1>
+                </header>
+                <article>
+                    <header>
+                        <h1>Новость 1</h1>
+                    </header>
+                    <p>Лид новости 1</p>
+                </article>
+                <article>
+                    <header>
+                        <h1>Новость 1</h1>
+                    </header>
+                    <p>Лид новости 1</p>
+                </article>
+                <article>
+                    <header>
+                        <h1>Critics say appointment of former head of Breitbart News will empower white nationalists</h1>
+                    </header>
+                    <p>
+                    President-elect Donald Trump named campaign chairman Stephen Bannon as chief
+                    strategist at the White House. A chorus of advocacy groups,
+                    commentators and congressional Democrats denounced Bannon as
+                    a proponent of racist, anti-Semitic and misogynistic views.
+                    </p>
+                    <p>
+                    President-elect Donald Trump named campaign chairman Stephen Bannon as chief
+                    strategist at the White House. A chorus of advocacy groups,
+                    commentators and congressional Democrats denounced Bannon as
+                    a proponent of racist, anti-Semitic and misogynistic views.
+                    </p>
+                    <p>
+                    President-elect Donald Trump named campaign chairman Stephen Bannon as chief
+                    strategist at the White House. A chorus of advocacy groups,
+                    commentators and congressional Democrats denounced Bannon as
+                    a proponent of racist, anti-Semitic and misogynistic views.
+                    </p>
+                    <p>
+                    President-elect Donald Trump named campaign chairman Stephen Bannon as chief
+                    strategist at the White House. A chorus of advocacy groups,
+                    commentators and congressional Democrats denounced Bannon as
+                    a proponent of racist, anti-Semitic and misogynistic views.
+                    </p>
+                </article>
+            </section>
+        </main>
+
+
+    </body>
 </html>
